# jacks_side_projects

./: .gitignore
books/head_first_design_patterns/intro/: .gitignore  devenv.nix  settings.gradle.kts
books/learn_haskell_by_example/: readme.md
books/learn_haskell_by_example/caesar/src/: Lib.hs
books/learn_haskell_by_example/nl/: README.md  nl.cabal  package.yaml  stack.yaml
books/learn_haskell_by_example/nl/app/: Main.hs
books/learn_haskell_by_example/nl/src/: Lib.hs
books/learn_kubernetes_in_a_month_of_lunches/: .gitignore  ch01.md  readme.md
books/learn_kubernetes_in_a_month_of_lunches/ch02/: new-pod.yaml  readme.md
books/learn_kubernetes_in_a_month_of_lunches/ch03/: readme.md
challenges/aoc_2025/: readme.md
challenges/aoc_2025/day1-elixir/: .devenv.flake.nix
challenges/aoc_2025/day4-crystal/: .devenv.flake.nix  shard.yml
challenges/aoc_2025/day5-scala/: .devenv.flake.nix  .gitignore  build.mill  devenv.nix
sandboxes/bevy_tutorials/: Cargo.toml
sandboxes/bevy_tutorials/src/: main.rs
sandboxes/flutter_sandbox/: pubspec.yaml
sandboxes/flutter_sandbox/lib/: main.dart
sandboxes/nats/: .dockerignore  Cargo.toml  docker-compose.yml  listener.Dockerfile  server.Dockerfile
sandboxes/nats/src/: client_home_page.html  listener.rs  server.rs
tiny_projects/nu_plugin_geospatial/: Cargo.toml  README.md
tiny_projects/nu_plugin_geospatial/src/: from_wkb.rs  from_wkt.rs  into_wkb.rs  into_wkt.rs
tiny_projects/tinkering/: index.html
tiny_projects/tinkering/src/: Main.elm
tiny_projects/website/src/: Boids.elm
(+8 files in other folders)
