[package]
name = "bg_shoulda_coulda_dawooda"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-nats = "0.42.0"
axum = "0.8.4"
bytes = "1.10.1"
futures = "0.3.31"
serde_json = "1.0"
socketioxide = { version = "0.17.2", features = ["state"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.0", features = ["v4"] }

[[bin]]
name = "listener"
path = "src/listener.rs"

[[bin]]
name = "server"
path = "src/server.rs"
